# pysocial

./: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  prestart.sh  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
src/: routes.py
src/base/: classes.py  permissions.py  serializers.py
src/comments/: apps.py  models.py
src/feed/: services.py  urls.py  views.py
src/feed/management/commands/: createadmin.py  fakegen.py
src/followers/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/followers/migrations/: 0001_initial.py  0002_initial.py
src/profiles/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/profiles/migrations/: 0001_initial.py
src/wall/: admin.py  apps.py  models.py  serializers.py  views.py
src/wall/migrations/: 0001_initial.py
